RESOLVED FIXED274609
[WebGPU] PipelineLayout::errorValidatingBindGroupCompatibility erroneously looks at stage_in vertex buffers counts
https://bugs.webkit.org/show_bug.cgi?id=274609
Summary [WebGPU] PipelineLayout::errorValidatingBindGroupCompatibility erroneously lo...
Mike Wyrzykowski
Reported 2024-05-23 13:12:47 PDT
[WebGPU] PipelineLayout::errorValidatingBindGroupCompatibility erroneously looks at stage_in vertex buffers counts
Attachments
Mike Wyrzykowski
Comment 1 2024-05-23 13:13:01 PDT
Mike Wyrzykowski
Comment 2 2024-05-23 13:21:13 PDT
EWS
Comment 3 2024-05-24 21:09:07 PDT
Committed 279308@main (fdbf2f66e266): <https://commits.webkit.org/279308@main> Reviewed commits have been landed. Closing PR #29009 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.