[WebGPU] PipelineLayout::errorValidatingBindGroupCompatibility erroneously looks at stage_in vertex buffers counts https://bugs.webkit.org/show_bug.cgi?id=274609 <radar://128596599>

Reviewed by Dan Glastonbury.

The `+ vertexStageInBufferCount` in the validation is incorrect, removing
it appears to cause zero regressions and fixes the below regression tests.

* LayoutTests/fast/webgpu/repro_1323-274609-expected.txt: Added.
* LayoutTests/fast/webgpu/repro_1323-274609.html: Added.
* LayoutTests/fast/webgpu/repro_1323b-274609-expected.txt: Added.
* LayoutTests/fast/webgpu/repro_1323b-274609.html: Added.
* LayoutTests/fast/webgpu/repro_1323c-274609-expected.txt: Added.
* LayoutTests/fast/webgpu/repro_1323c-274609.html: Added.
* Source/WebGPU/WebGPU/PipelineLayout.mm:
(WebGPU::PipelineLayout::errorValidatingBindGroupCompatibility const):

Canonical link: https://commits.webkit.org/279308@main