Source/WebGPU/WebGPU/PipelineLayout.mm
@@ -283,7 +283,7 @@ NSString* PipelineLayout::errorValidatingBindGroupCompatibility(const PipelineLa
     auto setBindGroupsSize = bindGroups.size();
     auto& bindGroupLayouts = *m_bindGroupLayouts;
     auto numberOfBindGroupsInPipeline = bindGroupLayouts.size();
-    if (setBindGroupsSize + vertexStageInBufferCount < numberOfBindGroupsInPipeline) {
+    if (setBindGroupsSize < numberOfBindGroupsInPipeline) {
         if (numberOfBindGroupsInPipeline == 1 && !bindGroupLayouts[0]->entries().size())
             return nil;
         return [NSString stringWithFormat:@"number of bind groups set(%u) is less than the pipeline uses(%zu)", setBindGroupsSize, numberOfBindGroupsInPipeline];
